<resources>
    <string name="app_name">Timac AGRO - ExpoDireto </string>
    <string name="edit_message">Nome do Visitante</string>
    <string name="button_client">cliente</string>
    <string name="button_new">Novo</string>
    <string name="button_register">Cadastrar</string>
    <string name="name">Nome</string>
    <string name="city">Cidade</string>
    <string name="phone">Telefone</string>
    <string name="culture">Cultura</string>
    <string name="size">Tam. da Prop.</string>
    <string name="channel">Canal</string>
    <string name="cpf">CPF</string>
    <string name="supervision">Supervisão</string>
    <string name="importar">Importar</string>
    <string name="exportar">Exportar</string>
    <string name="listar">Listar</string>
    <string name="atc">ATC</string>

</resources>
