<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_client_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.httpfluidobjects.myapplication.NewClientFormActivity">

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="16sp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/culture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="16sp"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_marginTop="35dp"
        android:textSize="16sp"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textSize="16sp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/txtCidade"
            android:layout_alignStart="@+id/txtCidade"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/txtCanal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/cpf"
            android:textSize="16sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtCPF"
            android:textSize="14sp"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignRight="@+id/txtCanal"
            android:layout_alignEnd="@+id/txtCanal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtCidade"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:layout_below="@+id/textView10"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/txtTelefone"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:layout_below="@+id/txtCidade"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/txtCultura"
            android:layout_marginTop="22dp"
            android:textSize="14sp"
            android:inputType="text|textImeMultiLine"
            android:imeOptions="actionNext"
            android:layout_below="@+id/txtTelefone"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtProp"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:layout_below="@+id/txtCultura"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtCanal"
            android:layout_marginTop="17dp"
            android:textSize="14sp"
            android:imeOptions="actionNext"
            android:layout_below="@+id/txtProp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:text="@string/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="dbCadastrar"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSupervisao"
            android:inputType="text|textImeMultiLine"
            android:layout_below="@+id/txtCPF"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:imeOptions="actionNext"
            android:layout_marginTop="25dp"
            android:textSize="14sp"
            android:layout_alignLeft="@+id/txtCPF"
            android:layout_alignStart="@+id/txtCPF" />

        <TextView
            android:text="@string/supervision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="16sp"
            android:layout_alignTop="@+id/txtSupervisao"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>
