<?xml version="1.0" encoding="utf-8"?>



<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:weightSum="1"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="3dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:visibility="visible"
            app:titleTextColor="@android:color/white"
            app:subtitleTextColor="@android:color/white" />
    </FrameLayout>


    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:id="@+id/visitor_name"
        android:hint="@string/edit_message"
        android:autoText="false"
        android:inputType="text|textImeMultiLine"
        android:imeOptions="actionDone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/atcTextView"
        android:elevation="1dp"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        android:weightSum="1"
        android:gravity="bottom">

        <Button
            android:text="@string/button_new"
            android:layout_width="80dp"
            android:layout_height="63dp"
            android:id="@+id/button3"
            android:layout_weight="0.5"
            android:onClick="newClient"/>

        <Button

            android:layout_height="63dp"
            android:text="@string/button_client"
            android:id="@+id/button"
            android:layout_width="80dp"
            android:layout_weight="0.5"
            android:onClick="oldClient"/>

    </LinearLayout>

</LinearLayout>




  <!--  <?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
android:layout_width="match_parent" android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="br.com.httpfluidobjects.myapplication.MainActivity">

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:text="Hello World!" />

<TextView
    android:text="OLÁ MUNDO!!!!!!! :-)"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/textView3"
    android:layout_marginTop="72dp"
    android:layout_below="@+id/textView2"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

</RelativeLayout>

    -->